gcc/testsuite/rust/rustc/ui/const-generics/min-and-full-same-time.rs
#![feature(const_generics)]
// { dg-error "" "" { target *-*-* } .-1 }
#![allow(incomplete_features)]
#![feature(min_const_generics)]


fn main() {}

